update collection apis (#17)
